--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -76,10 +76,17 @@ jobs:
       # Tag and push Docker images to Docker Hub
       - name: Push Docker images to Docker Hub
         run: |
-          docker tag auth-service $DOCKER_USERNAME/auth-service:latest  # Tag the correct image
-          docker tag user-service $DOCKER_USERNAME/user-service:latest  # Tag the second image
-          docker push $DOCKER_USERNAME/auth-service:latest            # Push the first image
-          docker push $DOCKER_USERNAME/user-service:latest            # Push the second image
+          # Log in to Docker Hub
+          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
+          
+          # Tag the Docker images
+          docker tag auth-service $DOCKER_USERNAME/auth-service:latest  # Tag the auth-service image
+          docker tag user-service $DOCKER_USERNAME/user-service:latest  # Tag the user-service image
+          
+          # Push the Docker images to Docker Hub
+          docker push $DOCKER_USERNAME/auth-service:latest            # Push the auth-service image
+          docker push $DOCKER_USERNAME/user-service:latest            # Push the user-service image
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+
