--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,86 +1,34 @@
-name: CI/CD Pipeline for Authentication Microservice
+name: Deploy to EC2 using docker
 
 on:
   push:
     branches:
-      - master
-  pull_request:
-    branches:
-      - master
+      - main
 
 jobs:
-  build:
+  push-to-dockerhub:
     runs-on: ubuntu-latest
-
     steps:
-      # Checkout the repository
-      - name: Checkout code
+      - name: Checkout Repo
         uses: actions/checkout@v3
 
-      # Debug: List files at root and inside directories
-      - name: List files at root
-        run: |
-          ls -al /home/runner/work/UMM/UMM
-          
-      - name: List files inside Server1 directory
-        run: |
-          ls -al /home/runner/work/UMM/UMM/Server1
-          
-      - name: List files inside Server2 directory
-        run: |
-          ls -al /home/runner/work/UMM/UMM/Server2
-
-      # Set up Node.js environment
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - name: Login to docker hub
+        uses: docker/login-action@v2
         with:
-          node-version: '20'
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
 
-      # Install dependencies for Server1
-      - name: Install dependencies for Server1
-        working-directory: ./Server1
-        run: |
-          npm install
-
-      # Install dependencies for Server2
-      - name: Install dependencies for Server2
-        working-directory: ./Server2
-        run: |
-          npm install
-
-      # Build Docker image for Server1
-      - name: Build Docker image for Server1
-        working-directory: ./Server1
-        run: |
-          docker build --build-arg MONGO_URI=${{ secrets.MONGO_URI }} --build-arg JWT_SECRET=${{ secrets.JWT_SECRET }} -t $DOCKER_USERNAME/auth-service:latest .
-
-      # Build Docker image for Server2
-      - name: Build Docker image for Server2
-        working-directory: ./Server2
-        run: |
-            docker build --build-arg MONGO_URI=${{ secrets.MONGO_URI }} --build-arg JWT_SECRET=${{ secrets.JWT_SECRET }} -t $DOCKER_USERNAME/user-service:latest .
-
-      # Debug: List local Docker images to ensure the images were built
-      - name: List local Docker images
-        run: |
-          docker images
-
-      # Log in to Docker Hub (only once)
-      - name: Log in to Docker Hub
-        run: |
-          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin docker.io
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-
-      # Push Docker images to Docker Hub
-      - name: Push Docker images to Docker Hub
-        run: |
-          # Push the auth-service image
-          docker push $DOCKER_USERNAME/auth-service:latest
-          
-          # Push the user-service image
-          docker push $DOCKER_USERNAME/user-service:latest
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      - name: build-push-docker-image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./docker/Dockerfile.authentication
+          push: true
+          tags: aditya1113/authservice:latest
+      - name: build-push-docker-image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./docker/Dockerfile.user
+          push: true
+          tags: aditya1113/userservice:latest
