--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,13 +22,13 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./docker/Dockerfile.authentication
+          file: ./Server1/Dockerfile
           push: true
           tags: aditya1113/authservice:latest
       - name: build-push-docker-image
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./docker/Dockerfile.user
+          file: ./Server2/Dockerfile
           push: true
           tags: aditya1113/userservice:latest
