--- a/Server1/deployment.yml
+++ b/Server1/deployment.yml
@@ -17,6 +17,7 @@ spec:
       containers:
       - name: nodejs-container
         image: aditya1113/authservice:latest
+        imagePullPolicy: "Always"
         ports:
         - containerPort: 8000
         env:
