--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -48,10 +48,11 @@ jobs:
 
       - name: Deploy Updated Images to Minikube
         run: |
-          kubectl apply -f ./Server1/deployment.yml
           kubectl set image deployment/nodejs-deployment nodejs-container=aditya1113/authservice:latest
           kubectl rollout restart deployment nodejs-deployment
           kubectl rollout status deployment nodejs-deployment
+          kubectl apply -f ./Server1/deployment.yml
+          kubectl apply -f ./Server1/service.yml
 
 
       
