--- a/Server1/service.yml
+++ b/Server1/service.yml
@@ -1,13 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nodejs-service
+  name: nodejs-service-both
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: nodejs-app
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 8000
-    nodePort: 30997
+  - name: authservice-port
+    protocol: TCP
+    port: 80      
+    targetPort: 8000  
+    nodePort: 30001   
+  - name: userservice-port
+    protocol: TCP
+    port: 81      
+    targetPort: 8001  
+    nodePort: 30002   
