--- a/Server2/Dockerfile
+++ b/Server2/Dockerfile
@@ -2,9 +2,11 @@ FROM node:20-alpine
 
 # Declare build arguments
 ARG MONGO_URI
+ARG JWT_SECRET
 
 # Set environment variables
 ENV MONGO_URI=$MONGO_URI
+ENV JWT_SECRET=$JWT_SECRET
 
 WORKDIR /app
 
