--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,19 +24,19 @@ jobs:
           context: .
           file: ./Server1/Dockerfile
           push: true
-          tags: aditya1113/authservice:${{ github.sha }}
+          tags: aditya1113/authservice:latest
       - name: build-push-docker-image
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Server2/Dockerfile
           push: true
-          tags: aditya1113/userservice:${{ github.sha }}
+          tags: aditya1113/userservice:latest
 
-      - name: Set up kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version: 'latest'
+      # - name: Set up kubectl
+      #   uses: azure/setup-kubectl@v3
+      #   with:
+      #     version: 'latest'
 
       # - name: Start Minikube
       #   run: |
